--- a/faehigkeiten.css
+++ b/faehigkeiten.css
@@ -26,16 +26,43 @@ nav {
   font-family: "Times New Roman", Times, serif;
 }
 
-h1,
 h2,
 p,
-a,
-li {
+a {
   padding: 5px;
   background-color: #92a1ee;
   font-size: 24px;
 }
 
+.content-container h1 {
+  text-align: center;
+  display: inline-block;
+  margin-left: 25%;
+  padding: 5px;
+  font-size: 64px;
+  background-color: #92a1ee;
+}
+p {
+  display: inline-block;
+  align-items: center;
+  text-align: center;
+}
+
+/* Ich kanns nicht hinkriegen die liste nach rechts zu schieben */
+ul {
+  display: inline;
+  margin-left: 5%;
+  padding: 5px;
+  padding-left: 30px;
+  background-color: #92a1ee;
+  font-size: 24px;
+  line-height: 60px;
+  text-align: center;
+  align-items: center;
+  float: right;
+}
+
+/* Hier habe ich eine grid gemacht die oben links die bilder aufhängt */
 .griddy {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
