--- a/kontakt.css
+++ b/kontakt.css
@@ -54,6 +54,15 @@ li {
   margin: auto;
 }
 
+.content-container h1 {
+  text-align: center;
+  display: inline-block;
+  margin-left: 25%;
+  padding: 5px;
+  font-size: 64px;
+  background-color: #92a1ee;
+}
+
 .griddy img {
   width: 100%;
   height: auto;
